[package]
name = "in-memory-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-utils = "1.0.2"
clippy-utilities = "0.2.0"
criterion = "0.5.1"
hashlink = "0.8.4"
itertools = "0.12.0"
lockfree-cuckoohash = "0.1.0"
parking_lot = "0.12.1"

[dev-dependencies]

rand = "0.8.5"

[[bench]]
name = "block"
harness = false
